--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -119,7 +119,7 @@ jobs:
         uses: lowply/deploy-firebase@v0.0.5
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          FIREBASE_PROJECT: sosnovsky-devops
+          FIREBASE_PROJECT: sosnovsky-devopss
 
           
 
